--- a/EX02.ipynb
+++ b/EX02.ipynb
@@ -6,7 +6,7 @@
       "name": "EX02.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4WktavRDtYTc5KDVKKdkg",
+      "authorship_tag": "ABX9TyN3xmpNBRFZkmv5khWn3OWk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,65 +30,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "source": [
+        "#bahare_th#KG to Pound\n",
+        "kg =float(input(\"Enter Kg:\"))\n",
+        "\n",
+        "pound = kg * 2.205\n",
+        "print(pound)\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "HaMlFVAmdbFz",
-        "outputId": "70794ed1-cb8d-4db6-b68f-d19f6ed24738"
+        "id": "n0IVeSBUmY4h",
+        "outputId": "11d54a19-b0ea-4f40-fa79-428c09007060"
       },
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what is your guess?100\n",
-            "choose lower\n",
-            "what is your guess?50\n",
-            "choose lower\n",
-            "what is your guess?40\n",
-            "choose lower\n",
-            "what is your guess?30\n",
-            "choose lower\n",
-            "what is your guess?20\n",
-            "choose lower\n",
-            "what is your guess?10\n",
-            "choose lower\n",
-            "what is your guess?1\n",
-            "choose greater\n",
-            "what is your guess?5\n",
-            "choose greater\n",
-            "what is your guess?9\n",
-            "choose lower\n",
-            "what is your guess?8\n",
-            "choose lower\n",
-            "what is your guess?7\n",
-            "You win!!!\n",
-            "Your Try is 11\n"
+            "Enter Kg:12\n",
+            "26.46\n"
           ]
         }
-      ],
-      "source": [
-        "#Bahare_th#EX02#GuessNumberGame\n",
-        "import random\n",
-        "\n",
-        "count = 1\n",
-        "number = random.randint(1,100)\n",
-        "guess = int (input(\"what is your guess?\"))\n",
-        "\n",
-        "\n",
-        "while guess != number:\n",
-        "  if guess > number:\n",
-        "    count +=1\n",
-        "    print(\"choose lower\")\n",
-        "  else: \n",
-        "    count +=1\n",
-        "    print(\"choose greater\")\n",
-        "  guess = int (input(\"what is your guess?\"))\n",
-        "  \n",
-        "print(\"You win!!!\")\n",
-        "print(\"Your Try is\", count)\n"
       ]
     }
   ]
